tree-sitter-ff/test/corpus/literals.txt
==================
integer
==================

42

---

(program
  (number))

==================
decimal
==================

2.5

---

(program
  (number))

==================
string
==================

"hello"

---

(program
  (string))

==================
booleans
==================

true
false

---

(program
  (bool)
  (bool))

==================
atom
==================

:ok

---

(program
  (atom))

==================
unit
==================

()

---

(program
  (unit))

==================
comment
==================

# leading
42 # trailing

---

(program
  (comment)
  (number)
  (comment))
